--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
+.idea
 # dependencies
 /node_modules
 /.pnp
@@ -13,6 +13,11 @@
 
 # misc
 .DS_Store
+.gitignore
+.git
+.gitattributes
+.gitmodules
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -21,3 +26,13 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.DS_Store
+.vscode
+
+
+cypress/screenshots/
+cypress/videos/
+cypress/reports
+
+lib/
+node_modules
